deploy: 2c0656ba79866cf4be6ba68717e29ec269caff0f

--- a/classtoml_1_1key.html
+++ b/classtoml_1_1key.html
@@ -69,7 +69,7 @@
               <ul>
                 <li><a href="#typeless-methods">Constructors, destructors, conversion operators</a></li>
                 <li><a href="#equality-and-comparison">Equality and Comparison</a></li>
-                <li><a href="#iterators">Iterators</a></li>
+                <li><a href="#iteration">Iteration</a></li>
                 <li><a href="#metadata">Metadata</a></li>
                 <li><a href="#string-operations">String operations</a></li>
                 <li><a href="#friends">Friends</a></li>
@@ -232,8 +232,8 @@
             <dd>Returns true if <code>lhs &gt;= rhs.str()</code>.</dd>
           </dl>
         </section>
-        <section id="iterators">
-          <h2><a href="#iterators">Iterators</a></h2>
+        <section id="iteration">
+          <h2><a href="#iteration">Iteration</a></h2>
           <dl class="m-doc">
             <dt id="a38a33d5010936195ac2083e428165512">
               using <a class="m-doc-self" href="#a38a33d5010936195ac2083e428165512">const_iterator</a> = const char*
