--- a/classtoml_1_1parse__result.html
+++ b/classtoml_1_1parse__result.html
@@ -70,7 +70,7 @@
                 <li><a href="#typeless-methods">Constructors, destructors, conversion operators</a></li>
                 <li><a href="#pub-methods">Public functions</a></li>
                 <li><a href="#failed-parses">Failed parses</a></li>
-                <li><a href="#iterators">Iterators</a></li>
+                <li><a href="#iteration">Iteration</a></li>
                 <li><a href="#node-views">Node views</a></li>
                 <li><a href="#result-state">Result state</a></li>
                 <li><a href="#successful-parses">Successful parses</a></li>
@@ -147,8 +147,8 @@
             <dd>Returns the internal <a class="m-doc" href="classtoml_1_1parse__error.html">toml::<wbr/>parse_error</a> (rvalue overload).</dd>
           </dl>
         </section>
-        <section id="iterators">
-          <h2><a href="#iterators">Iterators</a></h2>
+        <section id="iteration">
+          <h2><a href="#iteration">Iteration</a></h2>
           <dl class="m-doc">
             <dt id="abf92ffb48c1f4d0f129f4032708d4ab0">
               using <a class="m-doc-self" href="#abf92ffb48c1f4d0f129f4032708d4ab0">const_iterator</a> = <a class="m-doc" href="namespacetoml.html#a4bccd753f54404e0097457514177fcbb">const_<wbr/>table_<wbr/>iterator</a>
