--- a/group__configuration.html
+++ b/group__configuration.html
@@ -116,6 +116,10 @@
             </dt>
             <dd>An 'export' annotation to add to non-static class member functions.</dd>
             <dt>
+              <span class="m-doc-wrap-bumper">#define <a class="m-doc" href="#ga8436c6f378c73f3446a3b6f1e2c5e81c">TOML_EXPORTED_STATIC_FUNCTION</a></span>
+            </dt>
+            <dd>An 'export' annotation to add to <code>static</code> class member functions.</dd>
+            <dt>
               <span class="m-doc-wrap-bumper">#define <a class="m-doc" href="#ga8219bfd7e75587516385b6022b28abc2">TOML_HEADER_ONLY</a></span>
             </dt>
             <dd>Sets whether the library is entirely inline.</dd>
@@ -209,6 +213,13 @@
             <p>An 'export' annotation to add to non-static class member functions.</p>
 <p>Not defined by default.</p><aside class="m-note m-default"><h4>Remark</h4><p>You might override this with <code>__declspec(dllexport)</code> if you were building the library into the public API of a DLL on Windows.</p></aside>
           </div></section>
+          <section class="m-doc-details" id="ga8436c6f378c73f3446a3b6f1e2c5e81c"><div>
+            <h3>
+              <span class="m-doc-wrap-bumper">#define <a class="m-doc-self" href="#ga8436c6f378c73f3446a3b6f1e2c5e81c">TOML_EXPORTED_STATIC_FUNCTION</a></span>
+            </h3>
+            <p>An 'export' annotation to add to <code>static</code> class member functions.</p>
+<p>Not defined by default.</p><aside class="m-note m-default"><h4>Remark</h4><p>You might override this with <code>__declspec(dllexport)</code> if you were building the library into the public API of a DLL on Windows.</p></aside>
+          </div></section>
           <section class="m-doc-details" id="ga8219bfd7e75587516385b6022b28abc2"><div>
             <h3>
               <span class="m-doc-wrap-bumper">#define <a class="m-doc-self" href="#ga8219bfd7e75587516385b6022b28abc2">TOML_HEADER_ONLY</a></span>
@@ -241,7 +252,7 @@
               <span class="m-doc-wrap-bumper">#define <a class="m-doc-self" href="#ga11a3368da40938a6b5cfd898320706f7">TOML_SMALL_FLOAT_TYPE</a></span>
             </h3>
             <p>If your codebase has an additional 'small' float type (e.g. half-precision), this tells toml++ about it.</p>
-<p>Not defined by default.</p><aside class="m-note m-default"><h4>Remark</h4><p>If you're building for a platform that has a built-in half precision float (e.g. <code><a class="m-doc poxy-injected poxy-external" href="https://gcc.gnu.org/onlinedocs/gcc/Half-Precision.html" target="_blank">_Float16</a></code>), you don't need to use this configuration option to make toml++ aware of it; the library comes with that built-in.</p></aside>
+<p>Not defined by default.</p><aside class="m-note m-default"><h4>Remark</h4><p>If you're building for a platform that has <code><a class="m-doc poxy-injected poxy-external" href="https://gcc.gnu.org/onlinedocs/gcc/Half-Precision.html" target="_blank">_Float16</a></code> and/or <code><a class="m-doc poxy-injected poxy-external" href="https://gcc.gnu.org/onlinedocs/gcc/Half-Precision.html" target="_blank">__fp16</a></code>, you don't need to use this configuration option to make toml++ aware of them. The library comes with that built-in.</p></aside>
           </div></section>
           <section class="m-doc-details" id="ga0722fa2c57da6360c7f2ba08c60e1a81"><div>
             <h3>
